syntax = "proto3";

package service;
option go_package = "./proto/service";

service EcomService {
    rpc GetProduct (ProductRequest) returns (ProductResponse);
}

message ProductRequest {
    string product_id = 1;
}

message ProductResponse {
    string name = 1;
    string description = 2;
    float price = 3;
}
